<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>app</groupId>
    <artifactId>GalaxyTrucker</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Galaxy Trucker</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>it.polimi.ingsw.Server</main.class>
        <junit.version>5.10.2</junit.version>
        <jackson.version>2.15.0</jackson.version>
        <javafx.version>24-ea+19</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.fusesource.jansi</groupId>
            <artifactId>jansi</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>3.30.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>24-ea+19</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>24-ea+19</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>24-ea+19</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>24-ea+19</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>client</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.7.0</version>
                        <executions>
                            <execution>
                                <id>package-client</id>
                                <phase>package</phase>
                                <goals><goal>single</goal></goals>
                                <configuration>
                                    <finalName>libs/Client</finalName>
                                    <appendAssemblyId>false</appendAssemblyId>
                                    <archive>
                                        <manifest>
                                            <mainClass>it.polimi.ingsw.Client</mainClass>
                                        </manifest>
                                    </archive>
                                    <descriptorRefs>
                                        <descriptorRef>jar-with-dependencies</descriptorRef>
                                    </descriptorRefs>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>jpackage-client</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>target/libs</argument>
                                        <argument>--main-jar</argument>
                                        <argument>Client.jar</argument>
                                        <argument>--main-class</argument>
                                        <argument>it.polimi.ingsw.app.ApplicationClient</argument>
                                        <argument>--type</argument>
                                        <argument>app-image</argument>
                                        <argument>--name</argument>
                                        <argument>Galaxy Trucker</argument>
                                        <argument>--app-version</argument>
                                        <argument>1.0</argument>
                                        <argument>--dest</argument>
                                        <argument>target/jpackage</argument>
                                        <argument>--java-options</argument>
                                        <argument>-Xmx512m</argument>
                                        <argument>--jlink-options</argument>
                                        <argument>--bind-services</argument>
                                        <argument>--module-path</argument>
                                        <argument>java.base,java.sql,java.xml,java.rmi,java.desktop, javafx.controls, javafx.fxml, org.jline</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>server</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.7.0</version>
                        <executions>
                            <execution>
                                <id>package-server</id>
                                <phase>package</phase>
                                <goals><goal>single</goal></goals>
                                <configuration>
                                    <finalName>libs/Server</finalName>
                                    <appendAssemblyId>false</appendAssemblyId>
                                    <archive>
                                        <manifest>
                                            <mainClass>it.polimi.ingsw.Server</mainClass>
                                        </manifest>
                                    </archive>
                                    <descriptorRefs>
                                        <descriptorRef>jar-with-dependencies</descriptorRef>
                                    </descriptorRefs>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>jpackage-server</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>target/libs</argument>
                                        <argument>--main-jar</argument>
                                        <argument>Server.jar</argument>
                                        <argument>--main-class</argument>
                                        <argument>it.polimi.ingsw.app.ApplicationServer</argument>
                                        <argument>--type</argument>
                                        <argument>app-image</argument>
                                        <argument>--name</argument>
                                        <argument>Galaxy Trucker Server</argument>
                                        <argument>--app-version</argument>
                                        <argument>1.0</argument>
                                        <argument>--dest</argument>
                                        <argument>target/jpackage</argument>
                                        <argument>--java-options</argument>
                                        <argument>-Xmx512m</argument>
                                        <argument>--jlink-options</argument>
                                        <argument>--bind-services</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.sql,java.xml,java.rmi,java.desktop</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <!-- Always use Java 23 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                </configuration>
            </plugin>

            <!-- Disable default JAR build -->
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>